# Karabo-aravisCameras

./: .ci-before-script.sh  .cpp-ci.yml  .gitignore  .gitlab-ci.yml  .install.sh  CMakeLists.txt  DEPENDS  Makefile  README.md  README.rst  conanfile.py  contributor_license_agreement.md  entity_contributor_license_agreement.md  pyproject.toml
nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
src/: AravisBasler2Camera.cc  AravisBasler2Camera.hh  AravisBaslerBase.cc  AravisBaslerBase.hh  AravisBaslerCamera.cc  AravisBaslerCamera.hh  AravisBaslerCameraScene.cc  AravisBaslerUsbCamera.cc  AravisBaslerUsbCamera.hh  AravisCamera.cc  AravisCamera.hh  AravisCameras.cc  AravisCameras.hh  AravisIdsCamera.cc  AravisIdsCamera.hh  AravisPhotonicScienceCamera.cc  AravisPhotonicScienceCamera.hh  BaslerCamera.cc  BaslerCamera.hh  CMakeLists.txt  PhotonicScienceCamera.cc  PhotonicScienceCamera.hh
src/test/: CMakeLists.txt  conanfile.py  testAravisCameras.cc  testrunner.cc
src/tests/: CameraTest.cc  CameraTest.hh  test_runner.cc
wheel_tests/: test_console.py
